# hive-fastapi

./: Makefile  README.md  pyproject.toml
app/: config.py  db.py  main.py
app/api/: dependencies.py
app/api/endpoints/: auth.py  event.py  user.py
app/domain/models/: token.py  user.py
app/domain/services/: auth.py  user.py
app/infrastructure/ad/: ad_client.py
app/infrastructure/db/models/: user.py
app/infrastructure/db/repositories/: base.py  user.py
app/infrastructure/security/: jwt.py
