[tool.poetry]
name = "hive"
version = "0.1.0"
description = ""
authors = ["tanuki evil <tanuki.evil@yandex.ru>"]
readme = "README.md"
packages = [{ include = "app" }]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
ldap3 = "^2.9.1"
pycryptodome = "^3.21.0"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"